force-app/main/default/objects/Quote/fields/Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Email__c</fullName>
    <formula>Project_Invoice__r.Contact_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Email</label>
    <type>Text</type>
</CustomField>