force-app/main/default/objects/Quote/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Project_Invoice__r.Contact_Name__c</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>