force-app/main/default/objects/Quote/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>