force-app/main/default/objects/Quote/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>Project_Invoice__r.Project_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>