force-app/main/default/objects/Quote/fields/Project_Amount__c.field-meta.xml
<CustomField>
    <fullName>Project_Amount__c</fullName>
    <formula>Project_Invoice__r.Project_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>