force-app/main/default/objects/Quote/fields/Project_Invoice_for_Quote__c.field-meta.xml
<CustomField>
    <fullName>Project_Invoice_for_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Invoice for Quote</label>
    <referenceTo>Project_Invoice__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>